# CStudio

./: CMakeLists.txt  README.md
libs/cstudio/: CMakeLists.txt
libs/cstudio/audioAPI/: audio.c  audio.h
libs/cstudio/formatters/: wav.c  wav.h
src/: main.c
